# tvb-xMax

./: .gitignore  AGENTS.md  PLAN.md  README.md  conftest.py  pyproject.toml
bench/: bench_backend_parity.py  bench_hopf_speedup.py  bench_portable_long_sdde.py  generate_readme_dynamics_figures.py  numpy_backend_results.md  portable_feature_prediction.md  results.md
docs/figures/: dynamics_feature_benchmark.json
examples/: 01_compile_and_infer.py  02_swaps.py  03_gpu_batch.py
tests/: conftest.py  test_artifact_cache.py  test_codegen.py  test_frontend.py  test_ir.py  test_lower.py  test_numpy_backend.py  test_optimize.py  test_pipeline.py  test_posterior.py  test_sim_budget.py  test_surrogates.py  test_swap.py  test_vectorize.py
tvb_max/: __init__.py  cli.py  ir.py
tvb_max/api/: auth.py  ratelimit.py  server.py
tvb_max/api/routes/: swap.py
tvb_max/community/: __init__.py  discord_bot.py
tvb_max/community/agents/: base.py  hopf_agent.py
tvb_max/community/leaderboard/: __init__.py  scoring.py
tvb_max/compiler/: __init__.py  codegen.py  frontend.py  lower.py  optimize.py  pipeline.py  posterior.py  swap.py  vectorize.py
tvb_max/surrogates/: __init__.py  base.py  fitzhugh_nagumo.py  hopf.py  kuramoto.py  mpr.py  wilson_cowan.py
tvb_xmax/: __init__.py  cde.py  cli.py  ir.py
tvb_xmax/_apvbt/: __init__.py  crosscoder.py  data.py  inference.py  simulation.py  utils.py
tvb_xmax/api/: __init__.py  auth.py  models.py  server.py
tvb_xmax/api/routes/: compile.py  infer.py  leaderboard.py
tvb_xmax/community/: discord_bot.py
tvb_xmax/community/agents/: __init__.py  base.py  mpr_agent.py
tvb_xmax/community/leaderboard/: scoring.py
tvb_xmax/compiler/: __init__.py  artifact_cache.py  codegen.py  frontend.py  lower.py  numpy_codegen.py  numpy_lower.py  numpy_pipeline.py  numpy_sim.py  numpy_vectorize.py  optimize.py  pipeline.py  posterior.py  sim_budget.py  sim_fn.py  swap.py  vectorize.py
tvb_xmax/surrogates/: __init__.py  base.py  wong_wang.py
