[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tvb-max"
version = "0.1.0"
description = "Advanced AI math compiler for virtual brain simulation (parody over apvbt+vbjax)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "vbjax",
]

[project.optional-dependencies]
sbi = ["sbi", "torch"]
api = ["fastapi", "uvicorn", "pydantic"]
community = ["discord.py"]
dev = ["pytest", "pytest-cov", "mkdocs-material"]

[project.scripts]
tvbmax = "tvb_max.cli:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that need the large HCP/1KB dataset or real sims",
]
