[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tvb-xMax"
version = "0.1.0"
description = "Advanced AI math compiler for virtual brain simulation (parody over apvbt+vbjax)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.0,<3",
    "autograd>=1.7,<2",
    "scipy>=1.14,<2",
    "tqdm>=4.67,<5",
]

[project.optional-dependencies]
api = ["fastapi>=0.129,<0.130", "uvicorn>=0.40,<0.41", "pydantic>=2.12,<3"]
community = ["discord.py>=2.4,<3"]
jax = ["jax>=0.10,<0.11", "jaxlib>=0.10,<0.11", "optax>=0.2,<0.3", "vbjax>=0.0.19,<0.1"]
dev = ["jax>=0.10,<0.11", "jaxlib>=0.10,<0.11", "optax>=0.2,<0.3", "vbjax>=0.0.19,<0.1", "pytest>=8,<9", "pytest-cov>=5,<6", "mkdocs-material>=9,<10"]

[project.scripts]
tvbxmax = "tvb_xmax.cli:main"

[tool.setuptools.packages.find]
include = ["tvb_xmax*"]
exclude = ["vendor*", "tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tvb_xmax", "examples"]
norecursedirs = ["vendor"]
addopts = "-q"
# For coverage gate, run: pytest --cov=tvb_xmax.compiler --cov=tvb_xmax.ir --cov-report=term-missing --cov-fail-under=80
markers = [
    "slow: marks tests that need the large HCP/1KB dataset or real sims",
]
